<resources>
    <string name="app_name">MarketApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_act">Login</string>
    <string name="password_hint">password</string>
    <string name="username_hint">email or phone number</string>
    <string name="login_btn">LOGIN</string>
    <string name="title_activity_home_act">Home</string>
    <string name="register_seller_btn">Register Seller</string>
    <string name="register_business_btn">Register Business</string>
    <string name="collect_taxes_btn">Collect Taxes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_act">Shop Registration</string>
    <string name="title_activity_payment">Payment</string>
    <string name="enter_firstname_hint">Enter Firstname</string>
    <string name="enter_lastname_hint">Enter Lastname</string>
    <string name="enter_mobile_money_phone_number_hint">Enter Phone Number</string>
    <!--<string name="access_token">pk.eyJ1Ijoic3RldmFuZG9oIiwiYSI6ImNpdmpjdWhqZjAwOHUydGw1N2M2dmRraG4ifQ.TZxSrl2nE1uAk5vqj2nlog</string>-->
    <string name="access_token">pk.eyJ1IjoiZGlnaXRhbGdsb2JlIiwiYSI6ImNqMzJ6anNydzAwNDgzMm5ycmN5MGdxcXAifQ.CtwiMjKIQHg2AdEOw5I8fQ</string>
    <string name="enter_other_name_hint">Enter Other name</string>
    <string name="enter_landmark_hint">Enter Landmark</string>
    <string name="select_a_business_type_hint">Select a Market</string>
    <string name="select_a_business_category_hint">Select a Shop Type</string>
    <string name="select_a_lane_hint">Are you selling your shopoutside </string>
    <string name="select_a_section_hint">Are you selling on the floor?</string>
    <string name="seller_picture_description">Seller Picture</string>
    <string name="select_a_network_hint">Select a Network</string>
    <string name="title_activity_seller_menu_act">Seller Menu</string>
    <string name="shop_btn">Register Shop</string>
    <string name="register_hawker_btn">Register hawker</string>
    <string name="Hawker_title">Hawker</string>
    <string name="selling_on_a_table_hint">Are you selling on Table?</string>
    <string name="selling_on_the_floor_hint">Are you selling on the floor?</string>
    <string name="title_activity_seller_profile_act">SellerProfileACT</string>
    <string name="selling_on_table_checkbox_label">Selling on table</string>
    <string name="selling_on_the_floor_checkbox_label">Selling on the floor</string>
    <string name="seller_pic_label">Seller Picture</string>
    <string name="shop_seller">Shop</string>
    <string name="sellers_btn_label">Sellers</string>
    <string name="hawker_string">Hawker</string>
    <string name="title_activity_recycler_view_example">RecyclerViewExampleActivity</string>


    <string name="add">Add Value</string>
    <string name="listview">List View</string>
    <string name="recyclerview">Recycler View</string>
    <string name="add_random">Random Add</string>
    <string name="start_delete">Start Deletion</string>
    <string name="delete">Delete</string>
    <string name="view_sellers_btn_label">Details</string>
    <string name="title_activity_seller_list_act">Seller List</string>
    <string name="store_db_successfull">Added successfully</string>
    <string name="select_a_shop_hint">Select a shop</string>
    <string name="select_a_market_hint">Select a Market</string>
    <string name="daily_payment_btn_label">Daily Payment</string>
    <string name="yearly_payment_label">Yearly Payment</string>
    <string name="seller_id_key">SellerID</string>
    <string name="action_search">search</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_settings">settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="add_seller">Add Seller</string>
    <string name="seller_list">Seller List</string>
    <string name="logout">Logout</string>
    <string name="input_prefill">0</string>
    <string name="input_hint">Amount</string>
    <string name="submit_btn_label">Submit</string>
</resources>
