<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libertycapital.marketapp.views.fragments.HomeFragment"
    tools:showIn="@layout/activity_home_act">


    <Button
        android:id="@+id/buttonRegisterSeller"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="37dp"
        android:text="@string/register_seller_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegisterBusiness"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/register_business_btn"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterSeller"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonCollectTaxes"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/collect_taxes_btn"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterBusiness"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
