<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libertycapital.marketapp.views.fragments.LoginFragment"
    tools:showIn="@layout/activity_login_act">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="74dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:inputType="text"
            android:hint="@string/username_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutUsername"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutUsername"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:text="@string/login_btn"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutPassword"
        app:layout_constraintHorizontal_bias="0.506" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
