<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libertycapital.marketapp.views.fragments.HawkerDetailsFragment">

    <Spinner
        android:id="@+id/spinnerMarket"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerHawkerType"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMarket" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutLandmark"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHawkerType"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/editTextLandmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_landmark_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonBusiness"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_media_next"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.852"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/checkBoxSellingOnTable"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:text="@string/selling_on_table_checkbox_label"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLandmark"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxSellingOnTheFloor"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:text="@string/selling_on_the_floor_checkbox_label"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSellingOnTable"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
