<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libertycapital.marketapp.views.fragments.PersonalDetailsFormFragment">


    <ImageView
        android:id="@+id/imageViewSeller"
        android:layout_width="175dp"
        android:layout_height="154dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteX="110dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonPdetails"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_media_next"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOname"
        app:layout_constraintVertical_bias="0.172" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutFname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSeller">

        <EditText
            android:id="@+id/editTextFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_firstname_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutLname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFname"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/editTextLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_lastname_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutOname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLname"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        >

        <EditText
            android:id="@+id/editTextOname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_other_name_hint" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
